# EvoCar

./: .clang-format  CMakeLists.txt  Doxyfile  Notatki.md  README.md  compile.bat  compile.sh  evoRacerOutput.json  install_packeges.sh  test_coverage.sh
CodeCoverageReport/: index-sort-f.html  index-sort-l.html  index.html
CodeCoverageReport/src/: Car.cc.func-sort-c.html  Car.cc.func.html  Car.cc.gcov.html  EvolutionaryAlgorithm.cc.func-sort-c.html  EvolutionaryAlgorithm.cc.func.html  EvolutionaryAlgorithm.cc.gcov.html  Main.cc.func-sort-c.html  Main.cc.func.html  Main.cc.gcov.html  Render.cc.func-sort-c.html  Render.cc.func.html  Render.cc.gcov.html  Shape.cc.func-sort-c.html  Shape.cc.func.html  Shape.cc.gcov.html  UserInput.cc.func-sort-c.html  UserInput.cc.func.html  UserInput.cc.gcov.html  Utility.cc.func-sort-c.html  Utility.cc.func.html  Utility.cc.gcov.html  index-sort-f.html  index-sort-l.html  index.html
config/: CarConfig.h  Config.h  EvolutionaryAlgorithmConfig.h  MapGenConfig.h  config.h
dependencies/: CMakeLists.txt
dependencies/box2d/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
include/imgui/: imconfig-SFML.h  imconfig.h  imgui-SFML.h  imgui.h  imgui_internal.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
lib/linux/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-system.so.2.5.1  libsfml-window.so.2.5.1
src/: Box.cc  Box.h  CMakeLists.txt  Car.cc  Car.h  Circle.cc  Circle.h  EvolutionaryAlgorithm.cc  EvolutionaryAlgorithm.h  GUI.cc  GUI.h  Genome.cc  Genome.h  Main.cc  Polygon.cc  Polygon.h  Render.cc  Render.h  Shape.cc  Shape.h  UserInput.cc  UserInput.h  Utility.cc  Utility.h  box.cc  box.h  car.cc  car.h  circle.cc  circle.h  main.cc  main.cpp  polygon.cc  polygon.h  render.cc  render.h
src/imgui/: imgui-SFML.cpp  imgui.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
test/: CMakeLists.txt  CarTest.cc  EvolutionaryAlgorithmTest.cc  ShapeTest.cc  UtilityTest.cc
tests/: BoxTest.cc
